--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,14 +15,14 @@
 		<div id="menuToggle">
 			<input type="checkbox" />
     <span></span>
-    <span></span>
+    <span></span> 
     <span></span>
     <ul id="menu">
       <a href="#"><li>Home</li></a>
       <a onclick="window.location.replace('/about')"><li>About</li></a>
-      <a href="#"><li>My Skills</li></a>
       <a onclick="window.location.replace('/contact')"><li>Contact</li></a>
-      <a href="" ><li>Show me more</li></a>
+      <a onclick="window.location.replace('/projects')" ><li>My Projects</li></a>
+      <a onclick="window.location.replace('/projects')" ><li>My achievements</li></a>
     </ul>
   </div>
  </nav>
