--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Contact Me</title>
+	<title>Contact Me | achaljhawar</title>
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
 
 	<link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
