--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <title>About me | achaljhawar</title>
 	<style type="text/css">
 		@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
@@ -17,6 +18,11 @@
 			color: rgba(255, 255, 255, .75);
 			font-family: 'Anonymous Pro', monospace;
 			background-color: rgb(25, 25, 25);
+      -youbkit-touch-callout: none;
+      -youbkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
 		}
 
 		.line-1 {
