--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Achal Jhawar</title>
+	<title>achaljhawar</title>
 	<link rel="icon" href="favicon.ico" />
 	<link rel="stylesheet" href="icons/font-awesome/css/all.css" />
 	<link rel="stylesheet" href="css/main.css" />
