--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -3,113 +3,138 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Projects Page</title>
+	<title>Projects | achaljhawar</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css'>
 	<style type="text/css">
-		@import url("https://fonts.googleapis.com/css?family=Marvel:400,700");
-		* {
-			padding: 0;
-			margin: 0;
+		body {
+			padding: 50px;
+			display: flex;
+			flex-flow: wrap;
+			font-family: "Ubuntu", sans-serif;
+			background-color: #000;
+		}
+
+		body * {
 			box-sizing: border-box;
 		}
 
-		body {
-			font-family: "Marvel", sans-serif;
-			background-color: black;
+		.card-container {
+			flex: 300px;
+			margin: 30px;
 		}
 
-		#info {
-			background-color: black;
-			padding: 2rem 0;
-		}
-
-		.row {
-			width: 100%;
-			max-width: 45rem;
-			margin: 0 auto;
-			padding: 1.5rem;
-			background-color: black;
-		}
-
-		.card {
-			display: inline-block;
-			width: 45%;
-			padding: 4rem 1rem 7rem 1rem;
-			background-color: teal;
+		.card-container .card {
+			font-weight: bold;
 			position: relative;
+			width: 100%;
 		}
 
-		.card:after {
-			content: "";
+		.card-container .card a {
+			padding: 30px;
+			width: 100%;
+			height: 400px;
+			border: 2px solid white;
+			background: white;
+			text-decoration: none;
+			color: black;
 			display: block;
-			width: 0px;
-			height: 0px;
-			background-color: skyblue;
-			top: 0px;
-			right: 0px;
-			border-bottom: 20px solid #006767;
-			border-left: 20px solid #006767;
-			border-right: 20px solid black;
-			border-top: 20px solid black;
-			position: absolute;
-			filter: drop-shadow(-5px 5px 3px rgba(0, 0, 0, 0.5));
+			transition: 0.25s ease;
 		}
 
-		.card:before {
-			content: "";
+		.card-container .card a:hover {
+			transform: translate(-30px, -30px);
+			border-color: #5bc0eb;
+		}
+
+		.card-container .card a:hover .card--display {
+			display: none;
+		}
+
+		.card-container .card a:hover .card--hover {
 			display: block;
-			width: 0px;
-			height: 0px;
-			border-top: 40px solid #006767;
-			border-right: 40px solid #006767;
-			border-left: 40px solid black;
-			border-bottom: 40px solid black;
-			bottom: 0px;
-			left: 0px;
+		}
+
+		.card-container .card a .card--display i {
+			font-size: 60px;
+			margin-top: 200px;
+		}
+
+		.card-container .card a .card--display h2 {
+			margin: 20px 0 0;
+		}
+
+		.card-container .card a .card--hover {
+			display: none;
+		}
+
+		.card-container .card a .card--hover h2 {
+			margin: 20px 0;
+		}
+
+		.card-container .card a .card--hover p {
+			font-weight: normal;
+			line-height: 1.5;
+		}
+
+		.card-container .card a .card--hover p.link {
+			margin: 20px 0 0;
+			font-weight: bold;
+			color: #5bc0eb;
+		}
+
+		.card-container .card .card--border {
 			position: absolute;
-			filter: drop-shadow(7px -7px 5px rgba(0, 0, 0, 0.5));
-			margin-right: 10%;
+			width: 100%;
+			height: 100%;
+			left: 0;
+			top: 0;
+			border: 2px dashed white;
+			z-index: -1;
 		}
 
-		.card:nth-of-type(1) {
-			margin-right: 9%;
+		.card-container .card.card--dark a {
+			color: white;
+			background-color: black;
+			border-color: white;
 		}
 
-		.card h2 {
-			color: snow;
-			margin-bottom: 1rem;
-			font-weight: 400;
-			text-transform: uppercase;
-			letter-spacing: 1px;
-		}
-
-		.card p {
-			color: snow;
-			font-size: 1.1rem;
-			line-height: 140%;
+		.card-container .card.card--dark a .card--hover .link {
+			color: #fde74c;
 		}
 	</style>
 </head>
 
 <body>
-	<!-- partial:index.partial.html -->
-	<section id="info">
-		<div class="row">
-			<div class="card">
-				<h2 align="center">Tyniurl</h2>
-				<p>It is a hassle free url shortner. You can use it to create QR codes and shorten urls.I'm not a professional coder,
-					but i tried my best to make it look cool and yet still keep it simple. While working with JS i got many errors, but
-					thanks to Youtube Tutorials for helping me fix them.<a href="https://github.com/achaljhawar/Tyniurl">GitHub</a></p>
-			</div>
-			<div class="card">
-				<h2 align="center">Gryffin</h2>
-				<p>Gryffin is a specialised search engine meant to find you the best possible results from a variety of search engines
-					including Bing, Google & Yahoo. Gryffin fetches results from these engines based on your query, filters them and finds
-					the best of all to show to you. You can have a look it at <a href="https://github.com/halo-legion/Gryffin">GitHub</a></p>
-			</div>
-		</div>
-	</section>
-	<!-- partial -->
-
+	<div class="card-container">
+		<div class="card"><a href="https://github.com/achaljhawar/Tyniurl/">
+				<div class="card--display"><i class="material-icons">link</i>
+        <h2>Tyniurl</h2>
+      </div>
+      <div class="card--hover">
+        <h2>Tyniurl</h2>
+        <p>This is a simple hassle free url shortner which also generates QR codes. It is made with node.js ,express and ejs. An over it is completely free to use and open-source check it out on GitHub.</p>
+        <p class="link">Click to see project</p>
+      </div></a>
+    <div class="card--border"></div>
+  </div>
+</div>
+<div class="card-container"> 
+  <div class="card"><a href="https://github.com/halo-legion/gryffin">
+      <div class="card--display"><i class="material-icons">search</i>
+        <h2>Gryffin</h2>
+      </div>
+      <div class="card--hover">
+        <h2>Gryffin</h2>
+        <p>Gryffin is a specialised search engine meant to find you the best possible results from a variety of search engines including Bing, Google & Yahoo. Gryffin fetches results from these engines based on your query, filters them and finds the best of all to show to you. </p>
+        <p class="link">Click to see project</p>
+      </div></a>
+    <div class="card--border"></div>
+  </div>
+</div>
+<!-- partial -->
+  
 </body>
-
 </html>
