--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,6 +3,7 @@
 
 <head>
   <title>About me | achaljhawar</title>
+  <link rel="icon" href="icons/favicon.ico" />
 	<style type="text/css">
 		@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
