--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,8 @@
       <a href="#"><li>Home</li></a>
       <a onclick="window.location.replace('/about')"><li>About</li></a>
       <a onclick="window.location.replace('/contact')"><li>Contact</li></a>
-      <a onclick="window.location.replace('/projects')" ><li>My Projects</li></a>
+      <a onclick="window.location.replace('/projects')" ><li>Projects</li></a>
+      <a onclick="window.location.replace('/projects')" ><li>Achievements</li></a>
     </ul>
   </div>
  </nav>
