--- a/views/achievements.ejs
+++ b/views/achievements.ejs
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>achaljhawar | Achievements</title>
+  <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat:300,600'>
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css'>
