--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Contact Me | achaljhawar</title>
+  <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,100,300' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:100,400,700" rel="stylesheet">
 
