--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
 	<title>achaljhawar</title>
 	<link rel="stylesheet" href="icons/font-awesome/css/all.css" />
 	<link rel="stylesheet" href="css/main.css" />
+  <link rel="shortcut icon" type="image/ico" href="icons/favicon.ico">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
       <a onclick="window.location.replace('/about')"><li>About</li></a>
       <a onclick="window.location.replace('/contact')"><li>Contact</li></a>
       <a onclick="window.location.replace('/projects')" ><li>Projects</li></a>
-      <a onclick="window.location.replace('/projects')" ><li>Achievements</li></a>
+      <a onclick="window.location.replace('/achievements')" ><li>Achievements</li></a>
     </ul>
   </div>
  </nav>
